# musicbox

./: .gitignore  LICENSE  Pipfile  environment.yml  requirements.txt  setup.cfg  test.ipynb  tox.ini
musicbox/: __init__.py  box.py  player.py  theory.py
tests/: test_box.py  test_theory.py
