[metadata]
name = musicbox
description = Generation of melodies for music box
long_description = file: README.md
long_description_content_type = text/markdown
author = Jan Hönig
author_email = jan.hoenig@fau.de
keywords = musicbox
license = MIT License
version = 0.0.1

[options]
packages = musicbox
install_requires =
    mido
tests_require = pytest
python_requires = >3.9
setup_requires = setuptools >= 40.0
test_suite = pytest

[options.extras_require]
doc = sphinx

[options.entry_points]
console_scripts =
    prepare = studon_scripts.prepare:main
    studon = studon_scripts.main:main

